--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,8 @@
 {% include header.html %}
 
-<div style="padding: 40px; margin: 0px;">
-    </div>
-
 <div style="padding: 0px; margin: 0px;">
   <div class="col-lg-3 sidebar hidden-md hidden-sm hidden-xs" style="padding: 0px; margin: 0px;">
-    <div data-spy="affix" data-offset-top="0">
+    <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;">
     <div>
       {% include sidebar.html %}
     </div>
@@ -14,35 +11,54 @@
     </div>
     </div>
   </div>
-  <div class="col-lg-9 bg-white" style="padding-top: 0px; padding-left: 20px; padding-right: 30px;">
-    <div class="row-fluid">
-      
-    </div>
-    <div class="wow fadeInUp" data-wow-delay="0.8s">
-    <div class="row-fluid" style="padding-top: 10px;">
+  <div class="col-lg-9" style="padding-top: 0px; padding-left: 20px; padding-right: 30px;">
+    <div class="row-fluid bg-white hidden-md hidden-sm hidden-xs" style="padding: 90px 30px 0px 0px; position: fixed; width: 100%;">
+      <!-- <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;"> -->
       <h4 style="color: #ccc;"> 
         <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
         //
         <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> 
       </h4>
-      <h1 class="master-color-light" style="font-size: 60px;">{{ page.title }}</h1>
     </div>
+
+    <div class="row-fluid bg-white hidden-lg hidden-xl" style="padding: 90px 30px 0px 0px; position: fixed; width: 100%;">
+      <!-- <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;"> -->
+      <h4 style="color: #ccc;" style="font-size: 2vw;"> 
+        <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
+        //
+        <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> 
+      </h4>
+    </div>
+
+    <div class="row-fluid bg-white" style="padding: 60px 0px;">
+    </div>
+  <!-- </div> -->
     {% if page.cover != "off" %}
-    <div class="row-fluid">
-      <img src="{{ page.cover }}" alt="page.coveralt">
-    </div>
-    <div>
+    <div class="row-fluid" style="background: url({{ page.cover-blur }}) no-repeat top left; background-attachment: fixed; background-size: cover;">
+      
+    <!-- <div class="wow fadeInUp" data-wow-delay="0.8s"> -->
+    
+    <div class="row-fluid" style="padding: 80px 20px 10px 40px;">
+      <h1 class="{{ page.color }} hidden-lg hidden-xl" style="font-size: 10vw;">{{ page.title }}</h1>
+      <h1 class="{{ page.color }} hidden-md hidden-sm hidden-xs" style="font-size: 7vw;">{{ page.title }}</h1>
+    <!-- </div> -->
+  </div>
+<!--     <div>
         <p style="color: #aaa; font-size: 16px;">{{ page.caption }}</p>
+    </div> -->
+    {% endif %}
     </div>
-    {% elsif page.soundcloud != "off" %}
+
+<!--     {% if page.soundcloud != "off" %}
     <div class="row-fluid">
       <iframe width="95%" height="130" scrolling="no" frameborder="no" src={{ page.soundcloud }}></iframe>
     </div>
     <div>
         <p style="color: #aaa; font-size: 16px;">{{ page.caption }}</p>
     </div>
-    {% endif %}
-    <div class="row-fluid">
+    {% endif %} -->
+    <div class="row-fluid bg-white">
+      <br>
       {{ content }}
       {% include social-media.html %}
       <br>
