--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,9 +32,17 @@
     <div class="row-fluid bg-white hidden-lg hidden-xl" style="padding: 90px 30px 0px 0px; position: fixed; width: 100%;">
       <!-- <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;"> -->
       <h4 style="color: #ccc;" style="font-size: 2vw;"> 
+        {% if page.previous.title != null %}
         <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
+        {% endif %}
+        {% if page.previous.title != null %}
+        {% if page.next.title != null %}
         //
+        {% endif %}
+        {% endif %}
+        {% if page.next.title != null %}
         <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> 
+        {% endif %}
       </h4>
     </div>
 
@@ -47,8 +55,9 @@
     <!-- <div class="wow fadeInUp" data-wow-delay="0.8s"> -->
     
     <div class="row-fluid" style="padding: 80px 20px 10px 40px;">
-      <h3 class="text-gray">{{ page.subtitle }}</h3>
-      <h1 class="{{ page.color }} hidden-lg hidden-xl" style="font-size: 10vw;">{{ page.title }}</h1>
+      <h3 class="text-gray hidden-lg hidden-xl" style="font-size: 100%;">{{ page.subtitle }}</h3>
+      <h3 class="text-gray hidden-md hidden-sm hidden-xs" style="font-size: 160%;">{{ page.subtitle }}</h3>
+      <h1 class="{{ page.color }} hidden-lg hidden-xl" style="font-size: 11vw;">{{ page.title }}</h1>
       <h1 class="{{ page.color }} hidden-md hidden-sm hidden-xs" style="font-size: 7vw;">{{ page.title }}</h1>
     <!-- </div> -->
   </div>
@@ -72,11 +81,11 @@
       {% include social-media.html %}
       <br>
       <br>
-      <h4 style="color: #ccc;"> 
+      <!-- <h4 style="color: #ccc;"> 
         <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
         //
         <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> 
-      </h4>
+      </h4> -->
       {% include disqus-comments.html %}
     </div>
   </div>
