--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
 </h4>
 
 <p style="color: #999; font-size: 15px; padding-top: 5px;">
-Get Mastered is a tutorial website for musicians who want to learn how to master music -- 
+Get Mastered is a tutorial website for musicians who want to learn how to master music <b>(though the site is currently under construction!)</b> -- 
 
 <span><a href="/about/What-Is-Get-Mastered/" style="color: #aaa;">Learn more</a><br><br></p>
 
