--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,15 +16,17 @@
       <!-- <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;"> -->
       <h4 style="color: #ccc;"> 
         {% if page.previous.title != null %}
-        <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
+        Go Back:
+        <a class="master-color-light" href="{{ page.previous.url }}">{{ page.previous.title }}</a>
         {% endif %}
         {% if page.previous.title != null %}
         {% if page.next.title != null %}
-        //
+          
         {% endif %}
         {% endif %}
         {% if page.next.title != null %}
-        <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> 
+        Next Up:
+        <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }}</a> 
         {% endif %}
       </h4>
     </div>
@@ -33,14 +35,16 @@
       <!-- <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;"> -->
       <h4 style="color: #ccc;" style="font-size: 2vw;"> 
         {% if page.previous.title != null %}
+        Go Back:
         <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
         {% endif %}
         {% if page.previous.title != null %}
         {% if page.next.title != null %}
-        //
+          
         {% endif %}
         {% endif %}
         {% if page.next.title != null %}
+        Next Up:
         <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> 
         {% endif %}
       </h4>
