--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
 </h4>
 
 <p style="color: #999; font-size: 15px; padding-top: 5px;">
-Get Mastered is home of the best mastering rates, period. 
+Get Mastered is a music mastering service with a focus on personal, musician to engineer relationships. 
 
 <span><a href="/about/What-Is-Get-Mastered/" style="color: #aaa;">Learn more.</a><br><br></p>
 
