--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
   <div class="col-lg-9" style="padding-top: 0px; padding-left: 20px; padding-right: 20px;">
     <div class="row-fluid bg-white hidden-md hidden-sm hidden-xs" style="padding: 90px 30px 0px 0px; position: fixed; width: 100%;">
       <!-- <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;"> -->
-      <h4 style="color: #ccc;"> 
+      <h4 style="color: #ccc; text-transform: uppercase;"> 
         {% if page.previous.title != null %}
         Go Back:
         <a class="master-color-light" href="{{ page.previous.url }}">{{ page.previous.title }}</a>
@@ -57,10 +57,10 @@
     <!-- <div class="wow fadeInUp" data-wow-delay="0.8s"> -->
     
     <div class="row-fluid" style="padding: 80px 20px 10px 40px;">
-      <h3 class="text-gray hidden-lg hidden-xl" style="font-size: 100%;">{{ page.subtitle }}</h3>
-      <h3 class="text-gray hidden-md hidden-sm hidden-xs" style="font-size: 160%;">{{ page.subtitle }}</h3>
-      <h1 class="{{ page.color }} hidden-lg hidden-xl" style="font-size: 11vw;">{{ page.title }}</h1>
-      <h1 class="{{ page.color }} hidden-md hidden-sm hidden-xs" style="font-size: 7vw;">{{ page.title }}</h1>
+      <h3 class="text-gray hidden-lg hidden-xl" style="font-size: 100%; text-transform: uppercase;">{{ page.subtitle }}</h3>
+      <h3 class="text-gray hidden-md hidden-sm hidden-xs" style="font-size: 160%; text-transform: uppercase;">{{ page.subtitle }}</h3>
+      <h1 class="{{ page.color }} hidden-lg hidden-xl" style="font-size: 11vw; text-transform: uppercase;">{{ page.title }}</h1>
+      <h1 class="{{ page.color }} hidden-md hidden-sm hidden-xs" style="font-size: 7vw; text-transform: uppercase;">{{ page.title }}</h1>
     <!-- </div> -->
   </div>
 <!--     <div>
