--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
 </h4>
 
 <p style="color: #999; font-size: 15px; padding-top: 5px;">
-Get Mastered is a mastering, stem mastering, and mix consultation service at a price musicians can actually afford.
+Get Mastered is a professional mastering and mixing service at a price musicians can actually afford.
 
 <span><a href="/about/What-Is-Get-Mastered/" style="color: #aaa;">Learn more.</a><br><br></p>
 
