--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,21 @@ My name is Keenan and I've been mastering, mixing, and recording music for six y
 
 <br>
 
+<h4 style="color: #777; display: inline; text-transform: uppercase;">
+    Get Social
+</h4>
+
+<br>
+<a href="http://www.facebook.com/getmastered"> <img src="/img/Button-FB.png" width="40px" height="40px"> </a>
+
+<a href="http://www.soundcloud.com/getmastered"> <img src="/img/Button-SC.png" width="40px" height="40px"> </a>
+
+<a href="http://www.twitter.com/getmastered"> <img src="/img/Button-Twit.png" width="40px" height="40px"> </a>
+<br>
+<br>
+
+
+
 <h4 style="color: #777; display: inline; text-transform: uppercase;">Learn about:</h4>
 
 
