--- a/_includes/footer-splash.html
+++ b/_includes/footer-splash.html
@@ -3,10 +3,10 @@
 
     </div>
 
-    <div class="col-lg-12 bg-white">
+    <div class="col-lg-12 bg-gray">
       <div class="row-fluid" style="text-align: center; padding: 3% 5%;">
 
-        <h3 style="color: #777; display: inline; text-transform: uppercase;">
+        <h3 style="color: #777; display: inline; font-size: 16px;">
     Get Social
 </h3>
 
